--- a/index.html
+++ b/index.html
@@ -15,9 +15,8 @@
 		<div id="container">
 			<header>
 				<div id="logo">
-					Relaxr
+					<h1>Relaxr</h1>
 				</div><!-- #logo -->
-
 				<nav>
 					<a href="">About</a>
 					<a href="">FAQ</a>
@@ -30,23 +29,28 @@
 			<main>
 				<section id="main_container">
 					<article>
-						<h2>How I implemented Relaxr in 2<br>weeks and changed my life.</h2>
+						<h2>How I implemented Relaxr in 2 weeks and changed my life.</h2>
 						<img src="images/blog_photo1.jpg" alt="dragon_boat">
-						<p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Nullam vitae urna et orci tristique finibus. In ultrices ligula in lacus commodo, sed lobortis erat congue. Proin quis tortor quis sapien pharetra facilisis. Pellentesque varius, ante eget venenatis pellentesque, odio diam posuere dolor, in malesuada lorem turpis sit amet nibh. Etiam in placerat neque. Pellentesque cursus luctus mauris ac consectetur. Ut est nulla, gravida id vestibulum id, finibus a sapien. Donec et nunc placerat, consectetur nulla vitae, bibendum urna. Pellentesque habitant morbi tristique senectus et netus et malesuada fames ac turpis egestas. Nullam at purus accumsan, blandit dui quis, vulputate quam. In laoreet mauris et nunc ultrices gravida. Pellentesque molestie nisi at ipsum auctor, at iaculis leo egestas. Cras diam risus, hendrerit sit amet facilisis sed, vehicula eu justo. Mauris eget eros risus. Sed in varius purus.</p>
+						<p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Nullam vitae urna et orci tristique finibus. In ultrices ligula in lacus commodo, sed lobortis erat congue. Proin quis tortor quis sapien pharetra facilisis. Pellentesque varius, ante eget venenatis pellentesque, odio diam posuere dolor, in malesuada lorem turpis sit amet nibh. Etiam in placerat neque. In laoreet mauris et nunc ultrices gravida. Pellentesque molestie nisi at ipsum auctor, at iaculis leo egestas. Mauris eget eros risus. Sed in varius purus.</p>
 						<div>
-							<a class="read_more" href="">Read more</a>
+							<a class="read_more" href="">Read more > </a>
 						</div>
 					</article>
+
+				<hr>	
 
 					<article>
-						<h2>I travelled across the globe thanks to<br>Relaxr's Excel automation</h2>
+						<h2>I travelled across the globe thanks to Relaxr's Excel automation</h2>
 						<img src="images/blog_photo2.jpg" alt="river">
-						<p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Nullam vitae urna et orci tristique finibus. In ultrices ligula in lacus commodo, sed lobortis erat congue. Proin quis tortor quis sapien pharetra facilisis. Pellentesque varius, ante eget venenatis pellentesque, odio diam posuere dolor, in malesuada lorem turpis sit amet nibh. Etiam in placerat neque. Pellentesque cursus luctus mauris ac consectetur. Ut est nulla, gravida id vestibulum id, finibus a sapien. Donec et nunc placerat, consectetur nulla vitae, bibendum urna. Pellentesque habitant morbi tristique senectus et netus et malesuada fames ac turpis egestas. Nullam at purus accumsan, blandit dui quis, vulputate quam. In laoreet mauris et nunc ultrices gravida. Pellentesque molestie nisi at ipsum auctor, at iaculis leo egestas. Cras diam risus, hendrerit sit amet facilisis sed, vehicula eu justo. Mauris eget eros risus. Sed in varius purus.</p>
+						<p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Nullam vitae urna et orci tristique finibus. In ultrices ligula in lacus commodo, sed lobortis erat congue. Proin quis tortor quis sapien pharetra facilisis. Pellentesque varius, ante eget venenatis pellentesque, odio diam posuere dolor, in malesuada lorem turpis sit amet nibh. Etiam in placerat neque. Pellentesque cursus luctus mauris ac consectetur. Ut est nulla, gravida id vestibulum id, finibus a sapien. Donec et nunc placerat, consectetur nulla vitae, bibendum urna.</p>
 
 						<div>
-							<a class="read_more" href="">Read more</a>
+							<a class="read_more" href="">Read more > </a>
 						</div>
 					</article>
+
+				<hr>
+
 				</section><!-- #main_container -->
 
 				<section id="sidebar">
@@ -61,7 +65,7 @@
 						</ul>
 
 						<h3>About Relaxr</h3>
-						<p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Nullam vitae urna et orci tristique finibus. In ultrices ligula in lacus commodo, sed lobortis erat congue. Proin quis tortor quis sapien pharetra facilisis.</p>
+						<p>Proin sed justo vel sapien varius auctor. Proin scelerisque massa at luctus tincidunt. Fusce porttitor, sapien sed tincidunt fringilla.</p>
 						<a href="">Learn More</a>
 					</nav>
 				</section><!-- #sidebar -->
@@ -74,11 +78,13 @@
 				<div id="footer_logo">
 					Relaxr
 				</div><!-- #footer_logo -->
-				<div>
+				<div id="social_media">
 					<a href="http://www.twitter.com"><img src="images/twitter.png" alt="twitter"></a>
 					<a href="http://www.facebook.com"><img src="images/facebook.png" alt="facebook"></a>
 				</div>
-				&copy; Copyright 2015. Relaxr.
+				<div id="copyright">
+					&copy; Copyright 2015. Relaxr.
+				</div>
 			</footer>
 		</div><!-- #container -->
 	</body>
