--- a/index.html
+++ b/index.html
@@ -66,8 +66,11 @@
 
 						<h3>About Relaxr</h3>
 						<p>Proin sed justo vel sapien varius auctor. Proin scelerisque massa at luctus tincidunt. Fusce porttitor, sapien sed tincidunt fringilla.</p>
-						<a href="">Learn More</a>
+						<a id="learn_more" href="">Learn More</a>
 					</nav>
+					<div id="ad">
+						<img src="images/ad-unit.png" alt="twitter">
+					</div>
 				</section><!-- #sidebar -->
 			</main><!-- #main -->
 
@@ -83,7 +86,7 @@
 					<a href="http://www.facebook.com"><img src="images/facebook.png" alt="facebook"></a>
 				</div>
 				<div id="copyright">
-					&copy; Copyright 2015. Relaxr.
+					Copyright 2015. Relaxr.
 				</div>
 			</footer>
 		</div><!-- #container -->
