--- a/index.html
+++ b/index.html
@@ -45,14 +45,13 @@
 						<p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Nullam vitae urna et orci tristique finibus. In ultrices ligula in lacus commodo, sed lobortis erat congue. Proin quis tortor quis sapien pharetra facilisis. Pellentesque varius, ante eget venenatis pellentesque, odio diam posuere dolor, in malesuada lorem turpis sit amet nibh. Etiam in placerat neque. Pellentesque cursus luctus mauris ac consectetur. Ut est nulla, gravida id vestibulum id, finibus a sapien. Donec et nunc placerat, consectetur nulla vitae, bibendum urna.</p>
 
 						<div>
-							<a class="read_more" href="">Read more > </a>
+							<a class="read_more" href="read_more">Read more > </a>
 						</div>
 					</article>
 
 				<hr>
 
 				</section><!-- #main_container -->
-
 				<section id="sidebar">
 					<nav>
 						<h3>Catergories</h3>
@@ -69,7 +68,7 @@
 						<a id="learn_more" href="">Learn More</a>
 					</nav>
 					<div id="ad">
-						<img src="images/ad-unit.png" alt="twitter">
+						<img src="images/ad-unit.png" alt="ad">
 					</div>
 				</section><!-- #sidebar -->
 			</main><!-- #main -->
