--- a/index.html
+++ b/index.html
@@ -25,7 +25,6 @@
 					<a href="">Blog</a>
 				</nav>
 			</header>
-
 			<main>
 				<section id="main_container">
 					<article>
@@ -36,47 +35,40 @@
 							<a class="read_more" href="">Read more > </a>
 						</div>
 					</article>
-
-				<hr>	
-
+					<hr>	
 					<article>
 						<h2>I travelled across the globe thanks to Relaxr's Excel automation</h2>
 						<img src="images/blog_photo2.jpg" alt="river">
 						<p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Nullam vitae urna et orci tristique finibus. In ultrices ligula in lacus commodo, sed lobortis erat congue. Proin quis tortor quis sapien pharetra facilisis. Pellentesque varius, ante eget venenatis pellentesque, odio diam posuere dolor, in malesuada lorem turpis sit amet nibh. Etiam in placerat neque. Pellentesque cursus luctus mauris ac consectetur. Ut est nulla, gravida id vestibulum id, finibus a sapien. Donec et nunc placerat, consectetur nulla vitae, bibendum urna.</p>
-
 						<div>
 							<a class="read_more" href="read_more">Read more > </a>
 						</div>
 					</article>
-
-				<hr>
-
-				</section><!-- #main_container -->
-				<section id="sidebar">
-					<nav>
-						<h3>Catergories</h3>
-						<ul>
-							<li><a href="">Success stories</a></li>
-							<li><a href="">Stats</a></li>
-							<li><a href="">How tos</a></li>
-							<li><a href="">Best of</a></li>
-							<li><a href="">Business tips</a></li>
-						</ul>
-
-						<h3>About Relaxr</h3>
-						<p>Proin sed justo vel sapien varius auctor. Proin scelerisque massa at luctus tincidunt. Fusce porttitor, sapien sed tincidunt fringilla.</p>
-						<a id="learn_more" href="">Learn More</a>
-					</nav>
-					<div id="ad">
-						<img src="images/ad-unit.png" alt="ad">
-					</div>
-				</section><!-- #sidebar -->
-			</main><!-- #main -->
-
+					<hr>
+					</section><!-- #main_container -->
+					<section id="sidebar">
+						<nav>
+							<h3>Catergories</h3>
+							<ul>
+								<li><a href="">Success stories</a></li>
+								<li><a href="">Stats</a></li>
+								<li><a href="">How tos</a></li>
+								<li><a href="">Best of</a></li>
+								<li><a href="">Business tips</a></li>
+							</ul>
+							<h3>About Relaxr</h3>
+							<p>Proin sed justo vel sapien varius auctor. Proin scelerisque massa at luctus tincidunt. Fusce porttitor, sapien sed tincidunt fringilla.</p>
+							<a id="learn_more" href="">Learn More</a>
+						</nav>
+						<div id="ad">
+							<img src="images/ad-unit.png" alt="ad">
+						</div><!-- #ad -->
+					</section><!-- #sidebar -->
+				</main><!-- #main -->
 			<footer>
 				<div id="signup">
 					<p>Sign Up Now!</p>
-				</div>
+				</div><!-- #signup -->
 				<div id="footer_logo">
 					Relaxr
 				</div><!-- #footer_logo -->
@@ -86,7 +78,7 @@
 				</div>
 				<div id="copyright">
 					Copyright 2015. Relaxr.
-				</div>
+				</div><!-- #copyright -->
 			</footer>
 		</div><!-- #container -->
 	</body>
